--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "vitest run",
     "format": "biome format",
     "lint": "biome lint",
-    "check": "biome check"
+    "check": "biome check",
+    "worker": "tsx watch --tsconfig tsconfig.json worker/index.ts"
   },
   "dependencies": {
     "@convex-dev/react-query": "0.1.0",
@@ -60,6 +61,7 @@
     "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^5.0.4",
     "jsdom": "^27.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
