--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "convex": "^1.27.3",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.561.0",
+    "motion": "^12.34.0",
     "nitro": "npm:nitro-nightly@latest",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
