--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "TanStack App",
-  "name": "Create TanStack App Sample",
+  "short_name": "Infinitune",
+  "name": "Infinitune — Infinite Generative Music",
   "icons": [
     {
       "src": "favicon.ico",
