Migrate LLM calls to Vercel AI SDK with concurrency control
Replace raw fetch() LLM calls with Vercel AI SDK (generateText,
generateObject, generateImage) via a central gateway in llm-client.ts.
Add per-provider semaphores (ollama:1, openrouter:5) to prevent
overloading local Ollama from the web server process.

- Create src/services/llm-client.ts with ProviderSemaphore + SDK wrappers
- Convert JSON schemas to Zod in llm.ts and enhance-session.ts
- Migrate 4 API routes to callLlmText/callLlmObject
- Migrate generateSongMetadata/generatePersonaExtract in llm.ts
- Migrate OpenRouter image path in cover.ts to callImageGen
- Fix temperature inconsistency (now set explicitly for all providers)
- Remove 8 unused @tanstack/ai-* packages, add 3 AI SDK packages
- Delete dead code: ai-devtools.tsx, repairJson()

Powered by human calories and mass GPU cycles.

--- a/package.json
+++ b/package.json
@@ -18,15 +18,8 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@modelcontextprotocol/sdk": "^1.17.0",
+    "@openrouter/ai-sdk-provider": "^2.2.3",
     "@tailwindcss/vite": "^4.0.6",
-    "@tanstack/ai": "latest",
-    "@tanstack/ai-anthropic": "latest",
-    "@tanstack/ai-client": "latest",
-    "@tanstack/ai-gemini": "latest",
-    "@tanstack/ai-ollama": "latest",
-    "@tanstack/ai-openai": "latest",
-    "@tanstack/ai-react": "latest",
-    "@tanstack/react-ai-devtools": "latest",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
@@ -35,6 +28,7 @@
     "@tanstack/react-store": "^0.8.0",
     "@tanstack/router-plugin": "^1.132.0",
     "@tanstack/store": "^0.8.0",
+    "ai": "^6.0.84",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.27.3",
@@ -42,6 +36,7 @@
     "lucide-react": "^0.561.0",
     "motion": "^12.34.0",
     "nitro": "npm:nitro-nightly@latest",
+    "ollama-ai-provider-v2": "^3.3.0",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
