--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite dev --port 3000",
+    "dev": "vite dev --port 5173",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run",
     "format": "biome format",
     "lint": "biome lint",
     "check": "biome check",
-    "worker": "tsx watch --tsconfig tsconfig.json worker/index.ts"
+    "worker": "tsx watch --tsconfig tsconfig.json worker/index.ts",
+    "room-server": "tsx watch --tsconfig tsconfig.json room-server/index.ts",
+    "dev:all": "npx concurrently -n vite,convex,worker,rooms -c blue,magenta,green,yellow \"pnpm dev\" \"npx convex dev\" \"pnpm worker\" \"pnpm room-server\""
   },
   "dependencies": {
     "@convex-dev/react-query": "0.1.0",
@@ -46,7 +48,8 @@
     "tw-animate-css": "^1.3.6",
     "vite-tsconfig-paths": "^6.0.2",
     "ws": "^8.19.0",
-    "zod": "4.2.1"
+    "zod": "4.2.1",
+    "zod-openapi": "^5.4.6"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
@@ -59,6 +62,7 @@
     "@types/react-dom": "^19.2.0",
     "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^5.0.4",
+    "concurrently": "^9.2.1",
     "jsdom": "^27.0.0",
     "tsx": "^4.21.0",
     "typescript": "^5.7.2",
