feat: add Convex migration + NFS rebuild scripts, fix cover persistence
- scripts/migrate-from-convex.ts: one-time migration from Convex cloud DB
  to SQLite + downloads cover images to data/covers/ and NFS song folders
- scripts/rebuild-from-nfs.ts: disaster recovery script that rebuilds
  SQLite purely from NFS generation.log files (no Convex needed)
- worker/song-worker.ts: capture coverBase64 from cover generation and
  pass it to saveSongToNfs() so NFS folders get cover.png going forward,
  with fallback to download from API server if base64 wasn't captured
- package.json: add migrate:convex and rebuild:nfs scripts
- api-server/index.ts: remove stale @ts-expect-error directives

Powered by human calories and mass GPU cycles.

--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "worker": "tsx watch --tsconfig tsconfig.json worker/index.ts",
     "room-server": "tsx watch --tsconfig tsconfig.json room-server/index.ts",
     "api-server": "tsx watch --tsconfig tsconfig.json api-server/index.ts",
-    "dev:all": "npx concurrently -n vite,api,worker,rooms -c blue,magenta,green,yellow \"pnpm dev\" \"pnpm api-server\" \"pnpm worker\" \"pnpm room-server\""
+    "dev:all": "npx concurrently -n vite,api,worker,rooms -c blue,magenta,green,yellow \"pnpm dev\" \"pnpm api-server\" \"pnpm worker\" \"pnpm room-server\"",
+    "migrate:convex": "tsx scripts/migrate-from-convex.ts",
+    "rebuild:nfs": "tsx scripts/rebuild-from-nfs.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@hono/node-server": "^1.19.9",
     "@hono/node-ws": "^1.3.0",
     "@modelcontextprotocol/sdk": "^1.17.0",
     "@openrouter/ai-sdk-provider": "^2.2.3",
