--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,7 +4,8 @@
 	"type": "module",
 	"scripts": {
 		"dev": "tsx watch --env-file=.env.local src/index.ts",
-		"typecheck": "tsc --noEmit"
+		"typecheck": "tsc --noEmit",
+		"test": "vitest run"
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.19.9",
@@ -25,6 +26,7 @@
 		"@types/node": "^22.10.2",
 		"@types/ws": "^8.18.1",
 		"tsx": "^4.21.0",
-		"typescript": "^5.7.2"
+		"typescript": "^5.7.2",
+		"vitest": "^3.2.4"
 	}
 }
