--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,13 +18,16 @@
 		"drizzle-orm": "^0.45.1",
 		"hono": "^4.11.9",
 		"ollama-ai-provider-v2": "^3.3.0",
+		"pino": "^10.3.1",
 		"ws": "^8.19.0",
 		"zod": "4.2.1"
 	},
 	"devDependencies": {
 		"@types/better-sqlite3": "^7.6.13",
 		"@types/node": "^22.10.2",
+		"@types/pino": "^7.0.5",
 		"@types/ws": "^8.18.1",
+		"pino-pretty": "^13.1.3",
 		"tsx": "^4.21.0",
 		"typescript": "^5.7.2",
 		"vitest": "^3.2.4"
