fix: use pnpm -C instead of --filter for dev scripts
pnpm 10's --filter exits immediately for long-running scripts,
causing the server to silently exit with code 0 in dev:all.

Powered by human calories and mass GPU cycles.

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "pnpm --filter @infinitune/web dev",
-    "server": "pnpm --filter @infinitune/server dev",
-    "dev:all": "npx concurrently -n web,server -c blue,magenta \"pnpm dev\" \"pnpm server\"",
+    "dev": "pnpm -C apps/web dev",
+    "server": "pnpm -C apps/server dev",
+    "dev:all": "npx concurrently -n web,server -c blue,magenta \"pnpm dev\" \"pnpm -C apps/server dev\"",
     "build": "pnpm --filter @infinitune/web build",
     "check": "biome check",
     "typecheck": "pnpm -r typecheck",
