--- a/package.json
+++ b/package.json
@@ -22,20 +22,20 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@hono/node-server": "^1.19.9",
     "@hono/node-ws": "^1.3.0",
-    "@modelcontextprotocol/sdk": "^1.17.0",
+    "@modelcontextprotocol/sdk": "^1.26.0",
     "@openrouter/ai-sdk-provider": "^2.2.3",
     "@paralleldrive/cuid2": "^3.3.0",
-    "@tailwindcss/vite": "^4.0.6",
-    "@tanstack/react-devtools": "^0.7.0",
+    "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-devtools": "^0.7.11",
     "@tanstack/react-query": "^5.90.21",
-    "@tanstack/react-router": "^1.132.0",
-    "@tanstack/react-router-devtools": "^1.132.0",
-    "@tanstack/react-router-ssr-query": "^1.131.7",
-    "@tanstack/react-start": "^1.132.0",
-    "@tanstack/react-store": "^0.8.0",
-    "@tanstack/router-plugin": "^1.132.0",
-    "@tanstack/store": "^0.8.0",
-    "ai": "^6.0.84",
+    "@tanstack/react-router": "^1.160.0",
+    "@tanstack/react-router-devtools": "^1.160.0",
+    "@tanstack/react-router-ssr-query": "^1.160.0",
+    "@tanstack/react-start": "^1.160.0",
+    "@tanstack/react-store": "^0.8.1",
+    "@tanstack/router-plugin": "^1.160.0",
+    "@tanstack/store": "^0.8.1",
+    "ai": "^6.0.86",
     "amqplib": "^0.10.9",
     "better-sqlite3": "^12.6.2",
     "class-variance-authority": "^0.7.1",
@@ -45,16 +45,16 @@
     "hono": "^4.11.9",
     "lucide-react": "^0.561.0",
     "motion": "^12.34.0",
-    "nitro": "npm:nitro-nightly@latest",
+    "nitro": "npm:nitro-nightly@3.0.1-20260213-154614-f663e76d",
     "ollama-ai-provider-v2": "^3.3.0",
     "radix-ui": "^1.4.3",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "streamdown": "^1.6.5",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.6",
-    "tw-animate-css": "^1.3.6",
-    "vite-tsconfig-paths": "^6.0.2",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "streamdown": "^1.6.11",
+    "tailwind-merge": "^3.4.1",
+    "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0",
+    "vite-tsconfig-paths": "^6.1.1",
     "ws": "^8.19.0",
     "zod": "4.2.1",
     "zod-openapi": "^5.4.6"
@@ -62,23 +62,23 @@
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
     "@tanstack/devtools-event-client": "^0.4.0",
-    "@tanstack/devtools-vite": "^0.3.11",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.2.0",
+    "@tanstack/devtools-vite": "^0.3.12",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.2",
     "@types/amqplib": "^0.10.8",
     "@types/better-sqlite3": "^7.6.13",
-    "@types/node": "^22.10.2",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
+    "@types/node": "^22.19.11",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
     "@types/ws": "^8.18.1",
-    "@vitejs/plugin-react": "^5.0.4",
+    "@vitejs/plugin-react": "^5.1.4",
     "concurrently": "^9.2.1",
     "drizzle-kit": "^0.31.9",
-    "jsdom": "^27.0.0",
+    "jsdom": "^27.4.0",
     "tsx": "^4.21.0",
-    "typescript": "^5.7.2",
-    "vite": "^7.1.7",
-    "vitest": "^3.0.5",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.1",
+    "vitest": "^3.2.4",
     "web-vitals": "^5.1.0"
   },
   "pnpm": {
