fix: address code review findings

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "pnpm -C apps/web dev",
     "server": "pnpm -C apps/server dev",
-    "dev:all": "npx concurrently -n web,server -c blue,magenta \"pnpm dev\" \"pnpm -C apps/server dev\"",
+    "dev:all": "pnpm exec concurrently --kill-others-on-fail -n web,server -c blue,magenta \"pnpm dev\" \"pnpm -C apps/server dev\"",
     "build": "pnpm --filter @infinitune/web build",
     "check": "biome check",
     "typecheck": "pnpm -r typecheck",
@@ -13,7 +13,7 @@
     "dev:old:api-server": "tsx watch --env-file=.env.local --tsconfig tsconfig.json api-server/index.ts",
     "dev:old:worker": "tsx watch --env-file=.env.local --tsconfig tsconfig.json worker/index.ts",
     "dev:old:room-server": "tsx watch --env-file=.env.local --tsconfig tsconfig.json room-server/index.ts",
-    "dev:old:all": "npx concurrently -n vite,api,worker,rooms -c blue,magenta,green,yellow \"pnpm dev\" \"pnpm dev:old:api-server\" \"pnpm dev:old:worker\" \"pnpm dev:old:room-server\"",
+    "dev:old:all": "pnpm exec concurrently --kill-others-on-fail -n vite,api,worker,rooms -c blue,magenta,green,yellow \"pnpm dev\" \"pnpm dev:old:api-server\" \"pnpm dev:old:worker\" \"pnpm dev:old:room-server\"",
     "tag:mp3s": "tsx --env-file=.env.local scripts/tag-mp3s.ts"
   },
   "dependencies": {
@@ -28,12 +28,12 @@
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-devtools": "^0.7.11",
     "@tanstack/react-query": "^5.90.21",
-    "@tanstack/react-router": "^1.160.0",
-    "@tanstack/react-router-devtools": "^1.160.0",
-    "@tanstack/react-router-ssr-query": "^1.160.0",
-    "@tanstack/react-start": "^1.160.0",
+    "@tanstack/react-router": "^1.160.2",
+    "@tanstack/react-router-devtools": "^1.160.2",
+    "@tanstack/react-router-ssr-query": "^1.160.2",
+    "@tanstack/react-start": "^1.160.2",
     "@tanstack/react-store": "^0.8.1",
-    "@tanstack/router-plugin": "^1.160.0",
+    "@tanstack/router-plugin": "^1.160.2",
     "@tanstack/store": "^0.8.1",
     "ai": "^6.0.86",
     "amqplib": "^0.10.9",
@@ -46,7 +46,7 @@
     "lucide-react": "^0.561.0",
     "motion": "^12.34.0",
     "nitro": "npm:nitro-nightly@3.0.1-20260213-154614-f663e76d",
-    "ollama-ai-provider-v2": "^3.3.0",
+    "ollama-ai-provider-v2": "^3.3.1",
     "radix-ui": "^1.4.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
