--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,19 +18,19 @@
 		"@tailwindcss/vite": "^4.0.6",
 		"@tanstack/react-devtools": "^0.7.0",
 		"@tanstack/react-query": "^5.90.21",
-		"@tanstack/react-router": "^1.132.0",
-		"@tanstack/react-router-devtools": "^1.132.0",
-		"@tanstack/react-router-ssr-query": "^1.131.7",
-		"@tanstack/react-start": "^1.132.0",
+		"@tanstack/react-router": "^1.160.2",
+		"@tanstack/react-router-devtools": "^1.160.2",
+		"@tanstack/react-router-ssr-query": "^1.160.2",
+		"@tanstack/react-start": "^1.160.2",
 		"@tanstack/react-store": "^0.8.0",
-		"@tanstack/router-plugin": "^1.132.0",
+		"@tanstack/router-plugin": "^1.160.2",
 		"@tanstack/store": "^0.8.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"highlight.js": "^11.11.1",
 		"lucide-react": "^0.561.0",
 		"motion": "^12.34.0",
-		"nitro": "npm:nitro-nightly@latest",
+		"nitro": "npm:nitro-nightly@3.0.1-20260213-154614-f663e76d",
 		"radix-ui": "^1.4.3",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
