--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "pnpm -C apps/web dev",
     "server": "pnpm -C apps/server dev",
-    "dev:all": "pnpm exec concurrently --kill-others-on-fail -n web,server -c blue,magenta \"pnpm dev\" \"pnpm -C apps/server dev\"",
+    "dev:all": "pnpm exec concurrently --kill-others-on-fail -n web,server -c blue,magenta \"pnpm dev\" \"LOG_TO_FILE=1 LOG_EVENT_BUS=1 WORKER_DIAGNOSTICS=1 pnpm -C apps/server dev\"",
     "build": "pnpm --filter @infinitune/web build",
     "check": "biome check",
     "typecheck": "pnpm -r typecheck",
@@ -14,7 +14,8 @@
     "dev:old:worker": "tsx watch --env-file=.env.local --tsconfig tsconfig.json worker/index.ts",
     "dev:old:room-server": "tsx watch --env-file=.env.local --tsconfig tsconfig.json room-server/index.ts",
     "dev:old:all": "pnpm exec concurrently --kill-others-on-fail -n vite,api,worker,rooms -c blue,magenta,green,yellow \"pnpm dev\" \"pnpm dev:old:api-server\" \"pnpm dev:old:worker\" \"pnpm dev:old:room-server\"",
-    "tag:mp3s": "tsx --env-file=.env.local scripts/tag-mp3s.ts"
+    "tag:mp3s": "tsx --env-file=.env.local scripts/tag-mp3s.ts",
+    "react:doctor": "pnpm exec react-doctor . --yes --project @infinitune/web"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -76,6 +77,7 @@
     "concurrently": "^9.2.1",
     "drizzle-kit": "^0.31.9",
     "jsdom": "^27.4.0",
+    "react-doctor": "^0.0.28",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
     "vitest": "^3.2.4",
