--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "pnpm -C apps/web dev",
     "server": "pnpm -C apps/server dev",
     "dev:all": "pnpm exec concurrently --kill-others-on-fail -n web,server -c blue,magenta \"pnpm dev\" \"LOG_TO_FILE=1 LOG_EVENT_BUS=1 WORKER_DIAGNOSTICS=1 pnpm -C apps/server dev\"",
+    "infi": "pnpm -C apps/cli infi",
     "build": "pnpm --filter @infinitune/web build",
     "check": "biome check",
     "typecheck": "pnpm -r typecheck",
