--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -17,6 +17,7 @@
 		"better-sqlite3": "^12.6.2",
 		"drizzle-orm": "^0.45.1",
 		"hono": "^4.11.9",
+		"jose": "^6.1.3",
 		"ollama-ai-provider-v2": "^3.3.1",
 		"pino": "^10.3.1",
 		"ws": "^8.19.0",
