--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,6 +13,7 @@
 		"@infinitune/shared": "workspace:*",
 		"@openrouter/ai-sdk-provider": "^2.2.3",
 		"@paralleldrive/cuid2": "^3.3.0",
+		"@statelyai/inspect": "^0.4.0",
 		"ai": "^6.0.84",
 		"better-sqlite3": "^12.6.2",
 		"drizzle-orm": "^0.45.1",
@@ -21,6 +22,7 @@
 		"ollama-ai-provider-v2": "^3.3.1",
 		"pino": "^10.3.1",
 		"ws": "^8.19.0",
+		"xstate": "^5.28.0",
 		"zod": "4.2.1"
 	},
 	"devDependencies": {
