Fix portless cover routing
Add host-aware /covers proxy and wire API_URL for portless API scripts

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dev": "pnpm -C apps/web dev",
     "server": "pnpm -C apps/server dev",
     "dev:all": "pnpm exec concurrently --kill-others-on-fail -n web,server -c blue,magenta \"pnpm dev\" \"LOG_TO_FILE=1 LOG_EVENT_BUS=1 WORKER_DIAGNOSTICS=1 pnpm -C apps/server dev\"",
+    "dev:web:portless": "VITE_API_URL=http://api.localhost:1355 node_modules/.bin/portless web pnpm -C apps/web dev",
+    "dev:server:portless": "API_URL=http://api.localhost:1355 node_modules/.bin/portless api pnpm -C apps/server dev",
+    "dev:all:portless": "pnpm exec concurrently --kill-others-on-fail -n web,server -c blue,magenta \"pnpm dev:web:portless\" \"LOG_TO_FILE=1 LOG_EVENT_BUS=1 WORKER_DIAGNOSTICS=1 pnpm dev:server:portless\"",
     "infi": "pnpm -C apps/cli infi",
     "build": "pnpm --filter @infinitune/web build",
     "check": "biome check",
@@ -78,6 +81,7 @@
     "concurrently": "^9.2.1",
     "drizzle-kit": "^0.31.9",
     "jsdom": "^27.4.0",
+    "portless": "^0.4.2",
     "react-doctor": "^0.0.28",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
